# ClipboardManager

./: .gitignore  Cargo.toml  build.rs  dupa.rc  startinspector.bat
src/: Clipboard.rs  Event.rs  EventHandler.rs  WinHandle.rs  Winapi.rs  WinapiProcesses.rs  Windows.rs  WindowsHandler.rs  ZSDA.accdb  index.htm  main.rs  winapi_processes.rs  windowAlingment.rs
src/frontend/: index.htm
