[package]
name = "ClipboardManager"
version = "0.1.0"
authors = ["Jakub-S-K <jakub.stanula.kaczka@gmail.com>", "Rogrir <jakubus118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = ["winuser", "minwindef", "libloaderapi", "windef"]}
sciter-rs = "0.5.54"
memory-module-sys = { git = "https://github.com/indygreg/rs-memory-module-sys", branch="main"}
